<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/splash_gradient_bg"
    >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutEmail"
        >

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edittextName"
            android:layout_width="414dp"
            android:maxLines="1"
            android:textColor="@android:color/white"
            android:imeOptions="actionNext"
            android:hint="@string/hint_name"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutMobile"
       >

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edittextEmailId"
            android:layout_width="414dp"
            android:maxLines="1"
            android:textColor="@android:color/white"
            android:imeOptions="actionNext"
            android:hint="@string/hint_email"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutPassword"
        >

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edittextMobile"
            android:layout_width="414dp"
            android:maxLines="1"
            android:textColor="@android:color/white"
            android:imeOptions="actionNext"
            android:hint="@string/hint_mobile"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edittextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textColor="@android:color/white"
            android:imeOptions="actionNext"
            android:hint="@string/hint_password"/>

    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:id="@+id/radioGroupStudentTeacher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword"
        >

        <RadioButton
            android:id="@+id/radioStudent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student"
            android:textColor="@android:color/white"
            />

        <RadioButton
            android:id="@+id/radioTeacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teacher"
            android:textColor="@android:color/white"
            />

    </RadioGroup>


    <RadioGroup
        android:id="@+id/radioGroupSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupStudentTeacher"
        >

        <RadioButton
            android:id="@+id/radioSub1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub1"
            android:textColor="@android:color/white"
            />

        <RadioButton
            android:id="@+id/radioSub2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub2"
            android:textColor="@android:color/white"
            />

        <RadioButton
            android:id="@+id/radioSub3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub3"
            android:textColor="@android:color/white"
            />

        <RadioButton
            android:id="@+id/radioSub4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub4"
            android:textColor="@android:color/white"
            />

    </RadioGroup>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupSubject"
        />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/textViewHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/have_account"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegister"

        />
    </android.support.constraint.ConstraintLayout>

</ScrollView>