<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SpalshActivity">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintVertical_bias="0.1"
        >

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="312dp"
            android:scaleType="matrix"
            app:srcCompat="@drawable/chatting_banner" />


    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintVertical_weight="1">


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/buttonLogin"
            style="@style/GoogleStyle"
            android:layout_width="173dp"
            android:layout_height="@dimen/dimen_40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/login"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/buttonRegister"
            style="@style/GoogleStyle"
            android:layout_width="161dp"
            android:layout_height="@dimen/dimen_40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/register"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/mTextViewUsing"
            style="@style/textStyle_normal"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:text="@string/login_using"
            android:textColor="@color/color_8a000000"
            android:textSize="@dimen/dimen_14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/mLinearLayoutSocialButton"
            style="@style/layout_normal"
            android:layout_height="@dimen/dimen_46dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="2.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mTextViewUsing">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/buttonFacebook"
                style="@style/FabStyle"
                android:layout_width="@dimen/dimen_144dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/facebook"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/buttonGoogle"
                style="@style/GoogleStyle"
                android:layout_width="@dimen/dimen_144dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingLeft="@dimen/dimen_10dp"
                android:text="@string/google"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

        </LinearLayout>



        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tvLoginUsing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:text="@string/or_using_email"
            android:textColor="@color/color_8a000000"
            android:textSize="@dimen/dimen_14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/buttonRegister"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent" />




    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>